--- a/samplemicroservice/build.gradle
+++ b/samplemicroservice/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.4.0.RELEASE'
+		springBootVersion = '1.3.2.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -12,21 +12,47 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'application'
+apply plugin: 'war'
 apply plugin: 'spring-boot'
 
 jar {
 	baseName = 'samplemicroservice'
-	version = '0.0.1-SNAPSHOT'
+	version = '1.0'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+mainClassName = "com.broadsoft.mapl.samplemicroservice.Application"
+
 repositories {
-	mavenCentral()
+    mavenCentral()
+    maven {
+        url "http://repo.spring.io/libs-snapshot"
+        url 'http://repo.spring.io/milestone'
+        url 'http://repo.spring.io/libs-release'
+    }
 }
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile("org.springframework.boot:spring-boot-starter-web") {
+        exclude module: 'spring-boot-starter-tomcat'
+    }   
+    compile("org.springframework.boot:spring-boot-starter-undertow")
+    compile('org.springframework.boot:spring-boot-starter-actuator')   
+    compile('org.springframework.cloud:spring-cloud-starter-eureka')
+    //compile("org.springframework.boot:spring-boot-starter-jdbc")
+//    compile("org.mariadb.jdbc:mariadb-java-client:1.3.7")  
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("junit:junit:4.11")
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.10'
+}
+dependencyManagement {
+    imports { 
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.M3"
+    }
 }
