--- a/samplemicroservice/src/main/resources/application.yaml
+++ b/samplemicroservice/src/main/resources/application.yaml
@@ -1,5 +1,18 @@
 spring:
   application:
       name: sample
+  datasource: 
+        driverClassName: org.mariadb.jdbc.Driver
+        url: "jdbc:mariadb://localhost/sample?autoreconnect=true"
+        password: "root"
+        username: "root"
+        testOnBorrow: true
+        testWhileIdle: true
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 30000
+        validationQuery: SELECT 1
+        max-active: 15
+        max-idle: 10
+        max-wait: 8000
 server:
   port: 0
