--- a/samplemicroservice/build.gradle
+++ b/samplemicroservice/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-undertow")
     compile('org.springframework.boot:spring-boot-starter-actuator')   
     compile('org.springframework.cloud:spring-cloud-starter-eureka')
-    //compile("org.springframework.boot:spring-boot-starter-jdbc")
-//    compile("org.mariadb.jdbc:mariadb-java-client:1.3.7")  
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.mariadb.jdbc:mariadb-java-client:1.3.7")  
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit:4.11")
 }
